<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Register"
    android:background="@color/light_Background">

    <LinearLayout
        android:id="@+id/validation_dialog"
        android:elevation="3dp"
        android:background="@drawable/validation_dialog"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:id="@+id/validation_image"
            android:layout_width="217dp"
            android:layout_height="111dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
        <TextView
            android:id="@+id/validation_msg"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/validation_msg"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/dark_color"
            android:textSize="20sp"
            android:padding="10dp"
        />
        <TextView
            android:id="@+id/error_msg"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/error_msg"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/ubuntu"
            android:textColor="#E91E63"
            android:textSize="16sp"
            android:paddingHorizontal="15dp"
            android:visibility="gone"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/validation_dialog_ok"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/ok"
            android:textColor="@color/dark_color"
            android:textSize="18sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/overbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/overbox"
        android:elevation="2dp"
        android:orientation="vertical"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/no_background"
        android:fontFamily="@font/ubuntu_bold"
        android:padding="0dp"
        android:text="@string/new_account"
        android:textAlignment="center"
        android:textColor="@color/dark_color"
        android:textSize="28sp"
        android:transitionName="footer" />

    <LinearLayout
        android:id="@+id/linear_register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_title"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"

        android:visibility="gone"
        >
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/email_Card"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:neumorph_shapeType="pressed">

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/no_background"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/dark_color"
                android:textColorHint="@color/hint_text_color"
                android:textCursorDrawable="@drawable/cursor" />
        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/password_Card"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:neumorph_shapeType="pressed">

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/no_background"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/dark_color"
                android:textColorHint="@color/hint_text_color"
                android:textCursorDrawable="@drawable/cursor" />
        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/confirm_password_Card"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:neumorph_shapeType="pressed">

            <EditText
                android:id="@+id/reg_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/no_background"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/dark_color"
                android:textColorHint="@color/hint_text_color"
                android:textCursorDrawable="@drawable/cursor" />
        </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphButton
                android:id="@+id/signup_button"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ubuntu"
                android:text="@string/sign_up"
                android:textColor="@color/dark_color"
                android:textSize="20sp" />
<Space
    android:layout_width="match_parent"
    android:layout_height="200dp"/>
        <TextView
            android:id="@+id/signin_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in_link"
            android:fontFamily="@font/ubuntu"
            android:textSize="18sp"
            android:textColor="@color/dark_color"
            android:layout_marginBottom="40dp"
            android:background="@drawable/no_background"
            android:padding="0dp"
            android:transitionName="footer"
            />
    </LinearLayout>
</RelativeLayout>